Refatorando módulo de envio de emails com clean arch